--- a/ServerCode/app/src/main/AndroidManifest.xml
+++ b/ServerCode/app/src/main/AndroidManifest.xml
@@ -2,12 +2,15 @@
 <manifest package="com.team8.game"
 		  xmlns:android="http://schemas.android.com/apk/res/android">
 
+	<uses-permission android:name="android.permission.INTERNET" />
+
 	<application
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
+		<meta-data android:name="com.google.android.gms.games.APP_ID" android:value="@string/app_id" />
 		<activity android:name=".MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
