--- a/Arza/build.gradle
+++ b/Arza/build.gradle
@@ -60,6 +60,7 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
+        compile 'com.squareup.okhttp3:okhttp:3.2.0'
     }
 }
 
