--- a/Arza/build.gradle
+++ b/Arza/build.gradle
@@ -65,9 +65,11 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
         compile 'com.squareup.okhttp3:okhttp:3.2.0'
+        compile 'com.melnykov:floatingactionbutton:1.3.0'
         compile 'io.karim:materialtabs:2.0.2'
         compile 'com.android.support:recyclerview-v7:23.+'
         compile 'com.android.support:support-v4:23.+'
+
     }
 }
 
